Changed navigation wrap to prevent txt overflow

--- a/css/main.css
+++ b/css/main.css
@@ -1234,7 +1234,7 @@ header .logo a {
 }
 .menu-toggle span {
 	display: block;
-	background-color: #ff0077;
+	background-color: rgb(255, 0, 119);
 	width: 24px;
 	height: 3px;
 	margin-top: -1.5px;
@@ -1328,7 +1328,7 @@ header .logo a {
 /* dropdown nav */
 .main-navigation {
 	background: #000000;
-	padding: 24px 30px 42px;
+	padding: 20px 24px 32px;
 	margin: 0;
 	width: 100%;
 	height: auto;
